# target-based-calibration

./: .gitignore  CMakeLists.txt  README.md
config/: board_params.yaml
core/: PCFeatureExtra.hpp  SolvePnP.hpp
data/data-velo-sim/: config.json
data/data-velo-sim/pointcloud/: 0.pcd  1.pcd  2.pcd  3.pcd  4.pcd  5.pcd
src/: aruco_test.cpp  board_corner_detection.cpp  board_corner_detection.h  data_reader.cpp  image_polygon.cpp  mainwindow.cpp  pointcloud_polygon.cpp  single_tagtest.h
